tests/ui/fail/not_found.rs
use macro_files::create;

fn main() {
    create!({ "README.md": readme });
}
